add websocket support

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0-SNAPSHOT'
 defaultTasks 'build'
 
 wrapper {
+    distributionType = Wrapper.DistributionType.ALL
     description "Regenerates the Gradle Wrapper files"
     gradleVersion = '5.5.1'
     distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
