--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -21,10 +21,18 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation("org.springframework.boot:spring-boot-starter-websocket")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
+    
     runtimeOnly project(':mpd-front')
 }
