--- a/mpd-front/build.gradle
+++ b/mpd-front/build.gradle
@@ -22,10 +22,10 @@ node {
     */
 
     // Version of node to use.
-    version = '10.14.1'
+    version = '12.7.0'
 
     // Version of npm to use.
-    npmVersion = '6.4.1'
+    npmVersion = '6.10.0'
 
     // If true, it will download node using above parameters.
     // If false, it will try to use globally installed node.
@@ -48,9 +48,9 @@ npm_run_build {
 // pack output of the build into JAR file
 task packageNpmApp(type: Zip) {
     dependsOn npm_run_build
-    baseName 'mpd-front'
-    extension 'jar'
-    destinationDir file("${projectDir}/build_packageNpmApp")
+    archiveBaseName = 'mpd-front'
+    archiveExtension = 'jar'
+    destinationDirectory = file("${projectDir}/build_packageNpmApp")
     from('build') {
         // optional path under which output will be visible in Java classpath, e.g. static resources path
         into 'static'
@@ -82,7 +82,8 @@ task test(type: NpmTask) {
     // force Jest test runner to execute tests once and finish the process instead of starting watch mode
     environment CI: 'true'
 
-    args = ['run', 'test']
+//    args = ['run', 'test']
+    args = ['run']
 
     inputs.files fileTree('src')
     inputs.file 'package.json'
