--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -33,6 +33,16 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-websocket")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     developmentOnly("org.springframework.boot:spring-boot-devtools")
-    
+
     runtimeOnly project(':mpd-front')
+
+    runtime group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    implementation group: 'com.google.guava', name: 'guava', version: '28.0-jre'
+
+}
+
+bootRun {
+    jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"]
 }
