--- a/mpd-front/package.json
+++ b/mpd-front/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@stomp/stompjs": "^5.4.2",
     "@types/immutable": "^3.8.7",
+    "@types/react-bootstrap": "^0.32.15",
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
@@ -44,13 +45,12 @@
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
     "immutable": "^4.0.0-rc.12",
-    "react-bootstrap": "^1.0.0-beta.10",
+    "react-bootstrap": "^0.32.4",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3"
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
