--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     
     runtimeOnly project(':mpd-front')
 
+    runtime group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
     // https://projectlombok.org
-    implementationOnly 'org.projectlombok:lombok:1.18.8'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation group: 'com.google.guava', name: 'guava', version: '28.0-jre'
