--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import sun.security.util.PropertyExpander
+
 group 'ru.net.arh'
 version '1.0-SNAPSHOT'
 
@@ -9,3 +11,13 @@ wrapper {
     gradleVersion = '5.5.1'
     distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
+
+task initCustom(type: Copy) {
+    from 'mpd-back/src/main/resources/config/mpd.properties.template'
+    into 'custom'
+    rename 'mpd.properties.template', 'mpd.properties'
+}
+
+//task processResources {
+//    PropertyExpander.expand('custom/application.yaml')
+//}
