--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -31,6 +31,7 @@ configurations {
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation("org.springframework.boot:spring-boot-starter-websocket")
+    implementation("org.springframework.boot:spring-boot-starter-aop")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 
