--- a/mpd-front/package.json
+++ b/mpd-front/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@stomp/stompjs": "^5.4.2",
+    "@types/jquery": "^3.3.31",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-redux": "^7.1.1",
     "@types/react-splitter-layout": "^3.0.0",
@@ -45,6 +46,8 @@
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
     "immutable": "^4.0.0-rc.12",
+    "jplayer": "^2.9.2",
+    "jquery": "^3.4.1",
     "react-bootstrap": "^0.32.4",
     "react-redux": "^7.1.0",
     "react-splitter-layout": "^4.0.0",
