--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,12 @@ task initCustom(type: Copy) {
     into 'custom'
     rename 'mpd.properties.template', 'mpd.properties'
 }
+
+task setEnv(type: Exec) {
+//    workingDir "$projectDir"
+    if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+        commandLine 'cmd', '/c', 'setenv.bat'
+    } else {
+        commandLine 'sh', '-c', './setenv.sh'
+    }
+}
