--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -36,8 +36,10 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     developmentOnly("org.springframework.boot:spring-boot-devtools")
+    implementation(":")
 
     runtimeOnly project(':mpd-front')
+    implementation project(':search-api')
 
     runtime group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
     compileOnly 'org.projectlombok:lombok:1.18.8'
