--- a/mpd-search-engine/build.gradle
+++ b/mpd-search-engine/build.gradle
@@ -21,7 +21,11 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework:spring-websocket')
+    implementation('org.springframework:spring-messaging')
     implementation project(':search-api')
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
 
 bootRun {
