--- a/mpd-back/src/main/resources/config/application.yaml
+++ b/mpd-back/src/main/resources/config/application.yaml
@@ -1,9 +1,9 @@
 mpdserver:
-  defaulthost: localhost
+  defaulthost: 192.168.1.110
   defaultport: 6600
   defaultpassword: 12345678
   defaultpinginterval: 15000
-  defaultStreamUrl: http://localhost:8000/mpd.mp3
+  defaultStreamUrl: http://192.168.1.110:18000/mpd.mp3
 
 searchEngine:
   url: http://localhost:9090/search
