--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 
     runtimeOnly project(':mpd-front')
+    implementation project(':search-api')
 
     runtime group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
     compileOnly 'org.projectlombok:lombok:1.18.8'
