--- a/mpd-back/src/main/resources/config/mpd.properties.template
+++ b/mpd-back/src/main/resources/config/mpd.properties.template
@@ -1,3 +1,8 @@
-mpdserver.host=127.0.0.1
-mpdserver.port=6600
-mpdserver.password=12345678
+mpdserver.host: localhost
+mpdserver.port: 6600
+mpdserver.password: 12345678
+mpdserver.pingInterval: 15000
+mpdserver.streamUrl: http://localhost:8000/mpd.mp3
+
+searchEngine.url: http://mpd-search:9090/search
+
