--- a/mpd-search-engine/build.gradle
+++ b/mpd-search-engine/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -26,6 +27,8 @@ dependencies {
     implementation project(':search-api')
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
+
+    testImplementation('junit:junit:4.12')
 }
 
 bootRun {
