--- a/mpd-search-engine/build.gradle
+++ b/mpd-search-engine/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
     testImplementation('junit:junit:4.12')
+    testImplementation('org.powermock:powermock-api-mockito:1.7.4')
+    testImplementation('org.powermock:powermock-module-junit4:1.7.4')
+
+    testImplementation ('org.mockito:mockito-core:1.10.19')
+
 }
 
 bootRun {
