fix in Dockerfile-ах

--- a/mpd-search-engine/Dockerfile
+++ b/mpd-search-engine/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-ADD build/libs/mpd-search-engine.jar mpd-search-engine.jar
+ADD ./build/libs/mpd-search-engine.jar mpd-search-engine.jar
 ENTRYPOINT ["java", "-jar", "/mpd-search-engine.jar"]
 EXPOSE 9090
