--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -34,7 +34,6 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-aop")
     implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("org.springframework.boot:spring-boot-starter-validation")
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 
     runtimeOnly ('org.webjars:jquery:3.2.1')  { transitive = false }
@@ -47,9 +46,13 @@ dependencies {
 
     implementation project(':search-api')
 
-    compileOnly 'org.projectlombok:lombok:1.18.8'
+    implementation('org.projectlombok:lombok:1.18.8')
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
-    implementation group: 'com.google.guava', name: 'guava', version: '28.0-jre'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.8'
+    implementation 'com.google.guava:guava:28.0-jre'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testCompile 'uk.co.jemos.podam:podam:7.2.3.RELEASE'
 
 }
 
