MpdReaderWriter сделал бином (prototype) в проперти вынес макс кол-во соединений и наибольшее число команд в мультикоманде

--- a/mpd-back/src/main/resources/config/application.yaml
+++ b/mpd-back/src/main/resources/config/application.yaml
@@ -4,6 +4,8 @@ mpdserver:
   defaultPassword: 12345678
   defaultPingInterval: 15000
   defaultStreamUrl: http://localhost:8000/mpd.mp3
+  defaultMaxCommandCount: 250
+  defaultMaxConnectionCount: 3
 
 searchEngine:
   defaultUrl: http://localhost:9090/search
