--- a/mpd-back/src/main/resources/config/mpd.properties.template
+++ b/mpd-back/src/main/resources/config/mpd.properties.template
@@ -3,6 +3,8 @@ mpdserver.port: 6600
 mpdserver.password: 12345678
 mpdserver.pingInterval: 15000
 mpdserver.streamUrl: http://localhost:8000/mpd.mp3
+mpdserver.maxCommandCount: 250
+mpdserver.maxConnectionCount: 3
 
 searchEngine.url: http://mpd-search:9090/search
 
