logs to folder; actuator

--- a/mpd-back/src/main/resources/config/application.yaml
+++ b/mpd-back/src/main/resources/config/application.yaml
@@ -9,3 +9,9 @@ mpdserver:
 
 searchEngine:
   defaultUrl: http://localhost:9090/search
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
