--- a/mpd-search-engine/src/main/resources/application.yaml
+++ b/mpd-search-engine/src/main/resources/application.yaml
@@ -3,3 +3,10 @@ server:
 
 mpdback:
   defaultAddress: ws://localhost:8080/javaclient
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
