--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - 8087:8080
     volumes:
       - ./custom/:/custom
+      - ./logs/:/logs
 
   mpd-search:
     build: ./mpd-search-engine
@@ -17,3 +18,4 @@ services:
       - 9090:9090
     volumes:
       - ./custom/:/custom
+        - ./logs/:/logs
