--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-aop")
     implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("org.springframework.boot:spring-boot-starter-validation")
+    implementation('org.springframework.boot:spring-boot-starter-actuator')
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     implementation 'org.apache.commons:commons-lang3:3.9'
 
