--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,10 @@ services:
     volumes:
       - ./custom/:/custom
         - ./logs/:/logs
+
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
+    environment:
+      - discovery.type=single-node
+    volumes:
+      - ./data:/usr/share/elasticsearch/data
