--- a/mpd-search-engine/src/main/resources/application.yaml
+++ b/mpd-search-engine/src/main/resources/application.yaml
@@ -12,6 +12,8 @@ management:
         include: "*"
 
 elasticsearch:
-  host: es01
+  host: localhost
   port: 9200
   protocol: http
+  index: mpd1
+
