--- a/mpd-search-engine/src/main/resources/application.yaml
+++ b/mpd-search-engine/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ management:
         include: "*"
 
 elasticsearch:
-  host: localhost
+  host: es01
   port: 9200
   protocol: http
   index: mpd1
