ES-properties in external config file

--- a/mpd-search-engine/src/main/resources/application.yaml
+++ b/mpd-search-engine/src/main/resources/application.yaml
@@ -12,8 +12,8 @@ management:
         include: "*"
 
 elasticsearch:
-  host: localhost
-  port: 9200
-  protocol: http
-  index: mpd1
+  defaultHost: localhost
+  defaultPort: 9200
+  defaultProtocol: http
+  defaultIndex: mpd1
 
