--- a/mpd-search-engine/src/main/resources/mpd-search.properties.template
+++ b/mpd-search-engine/src/main/resources/mpd-search.properties.template
@@ -2,3 +2,4 @@ mpdback.address: ws://mpd-back:8080/javaclient
 elasticsearch.host: es01
 elasticsearch.port: 9200
 elasticsearch.protocol: http
+elasticsearch.index: mpd_index
