--- a/mpd-search-engine/src/main/resources/es-config/mapping.json
+++ b/mpd-search-engine/src/main/resources/es-config/mapping.json
@@ -16,7 +16,7 @@
       "type": "search_as_you_type",
       "analyzer": "mpd_analyzer"
     },
-    "albumAritst": {
+    "albumArtist": {
       "type": "search_as_you_type",
       "analyzer": "mpd_analyzer"
     },
