--- a/mpd-back/build.gradle
+++ b/mpd-back/build.gradle
@@ -56,6 +56,11 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testCompile 'uk.co.jemos.podam:podam:7.2.3.RELEASE'
 
+    testImplementation('org.testcontainers:testcontainers:1.12.4')
+    testImplementation('io.cucumber:cucumber-java8:4.8.0')
+    testImplementation('io.cucumber:cucumber-spring:4.8.0')
+    testImplementation('io.cucumber:cucumber-junit:4.8.0')
+
 }
 
 bootRun {
