--- a/mpd-back/src/main/resources/config/application.yaml
+++ b/mpd-back/src/main/resources/config/application.yaml
@@ -15,3 +15,7 @@ management:
     web:
       exposure:
         include: "*"
+spring:
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
