--- a/mpd-back/Dockerfile
+++ b/mpd-back/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 ADD ./build/libs/mpd-back.jar mpd-back.jar
 ENTRYPOINT ["java", "-jar", "/mpd-back.jar"]
-EXPOSE 8080
+#EXPOSE 8080
